// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should convert Aliased CTE select sql (WITH nums AS (SELECT id, numeric_col AS "num" FROM all_types)
      SELECT all_types.id, n.num FROM all_types JOIN nums AS n ON n.id = all_types.id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "num",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Coalesce binary expression sql (SELECT COALESCE(numeric_col,0) + COALESCE(numeric_col,0) as "totalPaymentWithVat" FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "totalPaymentWithVat",
      "type": Object {
        "postgresType": "float4",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Right function sql (SELECT RIGHT('123', 2)) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "right",
      "type": Object {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array column item sql (SELECT static_arr[1] AS one_item FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "one_item",
      "type": Object {
        "comment": undefined,
        "nullable": true,
        "postgresType": "int8",
        "type": 4,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array constructor sql (SELECT ARRAY(SELECT json_build_object('test', other.integer_col) FROM all_types AS other WHERE all_types.id = other.id) as "arr" FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "arr",
      "type": Object {
        "items": Object {
          "nullable": true,
          "postgresType": "json",
          "type": 14,
          "value": Object {
            "items": Array [
              Object {
                "name": "test",
                "type": Object {
                  "comment": undefined,
                  "generated": false,
                  "nullable": true,
                  "postgresDescription": undefined,
                  "postgresType": "integer",
                  "type": 3,
                },
              },
            ],
            "postgresType": "json",
            "type": 13,
          },
        },
        "postgresType": "json[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records index composite column enum sql (SELECT (transactions.history[1]).state FROM transactions) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "state",
      "type": Object {
        "comment": undefined,
        "items": Array [
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Approved",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Rejected",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Failed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "transaction_state",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records index composite column int sql (SELECT (transactions.history[1]).user_id FROM transactions) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "user_id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records index sql (SELECT transactions.history[1] FROM transactions) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "history",
      "type": Object {
        "attributes": Object {
          "date_on": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "timestamp without time zone",
            "type": 6,
          },
          "description": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character varying",
            "type": 2,
          },
          "state": Object {
            "comment": undefined,
            "items": Array [
              Object {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Approved",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Rejected",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Failed",
                "postgresType": "text",
                "type": 2,
              },
            ],
            "nullable": true,
            "postgresType": "transaction_state",
            "type": 12,
          },
          "user_id": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "comment": undefined,
        "name": "transaction_history",
        "nullable": true,
        "postgresType": "transaction_history",
        "schema": "public",
        "type": 10,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records sql (SELECT transactions.history FROM transactions) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "history",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "attributes": Object {
            "date_on": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "timestamp without time zone",
              "type": 6,
            },
            "description": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "character varying",
              "type": 2,
            },
            "state": Object {
              "comment": undefined,
              "items": Array [
                Object {
                  "literal": "Pending",
                  "postgresType": "text",
                  "type": 2,
                },
                Object {
                  "literal": "Approved",
                  "postgresType": "text",
                  "type": 2,
                },
                Object {
                  "literal": "Rejected",
                  "postgresType": "text",
                  "type": 2,
                },
                Object {
                  "literal": "Failed",
                  "postgresType": "text",
                  "type": 2,
                },
              ],
              "nullable": true,
              "postgresType": "transaction_state",
              "type": 12,
            },
            "user_id": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "transaction_history",
          "postgresType": "transaction_history",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "transaction_history[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 1 sql (SELECT COALESCE(id, character_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "comment": undefined,
            "generated": false,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
          Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 2 sql (SELECT COALESCE(character_col, id) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
          Object {
            "comment": undefined,
            "generated": false,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 3 sql (SELECT COALESCE(12, character_col, id) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "literal": 12,
            "postgresType": "float4",
            "type": 3,
          },
          Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
          Object {
            "comment": undefined,
            "generated": false,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 4 sql (SELECT COALESCE(integer_col, character_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
          Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite array column sql (SELECT item_arr FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "item_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "attributes": Object {
            "name": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite array const sql (SELECT '{}'::inventory_item[]) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "attributes": Object {
            "name": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": undefined,
          "type": 10,
        },
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from table sql (SELECT (item).supplier_id FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "supplier_id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from view sql (SELECT (item).supplier_id FROM all_types_view) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "supplier_id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert count distinct sql (SELECT COUNT(DISTINCT id) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "count",
      "type": Object {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert date column inside json_build_object sql (SELECT json_build_object('dateOn', date_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "items": Array [
          Object {
            "name": "dateOn",
            "type": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "date",
              "type": 2,
            },
          },
        ],
        "postgresType": "json",
        "type": 13,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert date literal inside json_build_object sql (SELECT json_build_object('dateOn', '2022-01-01'::date, 'timestamp', '2022-01-01'::timestamp)) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "items": Array [
          Object {
            "name": "dateOn",
            "type": Object {
              "postgresType": "date",
              "type": 2,
            },
          },
          Object {
            "name": "timestamp",
            "type": Object {
              "postgresType": "timestamp",
              "type": 2,
            },
          },
        ],
        "postgresType": "json",
        "type": 13,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert different result types for returning sql (UPDATE all_types SET id = 1 RETURNING *) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "not_null",
      "type": Object {
        "comment": "This column should never be null",
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "default_not_null",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "bigint_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    Object {
      "name": "bigserial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    Object {
      "name": "bit_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit",
        "type": 2,
      },
    },
    Object {
      "name": "bit_varying_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit varying",
        "type": 2,
      },
    },
    Object {
      "name": "boolean_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "boolean",
        "type": 5,
      },
    },
    Object {
      "name": "box_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "box",
        "type": 2,
      },
    },
    Object {
      "name": "bytea_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bytea",
        "type": 0,
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
    Object {
      "name": "character_varying_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character varying",
        "type": 2,
      },
    },
    Object {
      "name": "cidr_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "cidr",
        "type": 2,
      },
    },
    Object {
      "name": "circle_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "circle",
        "type": 13,
      },
    },
    Object {
      "name": "date_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "date",
        "type": 6,
      },
    },
    Object {
      "name": "double_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
    Object {
      "name": "inet_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "inet",
        "type": 2,
      },
    },
    Object {
      "name": "integer_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "interval_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "interval",
        "type": 13,
      },
    },
    Object {
      "name": "json_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "json",
        "type": 8,
      },
    },
    Object {
      "name": "jsonb_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "jsonb",
        "type": 8,
      },
    },
    Object {
      "name": "line_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "line",
        "type": 2,
      },
    },
    Object {
      "name": "lseg_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "lseg",
        "type": 2,
      },
    },
    Object {
      "name": "macaddr_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "macaddr",
        "type": 2,
      },
    },
    Object {
      "name": "money_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "money",
        "type": 2,
      },
    },
    Object {
      "name": "numeric_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
    Object {
      "name": "path_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "path",
        "type": 2,
      },
    },
    Object {
      "name": "pg_lsn_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "pg_lsn",
        "type": 2,
      },
    },
    Object {
      "name": "point_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "point",
        "type": 13,
      },
    },
    Object {
      "name": "polygon_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "polygon",
        "type": 2,
      },
    },
    Object {
      "name": "real_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "real",
        "type": 3,
      },
    },
    Object {
      "name": "smallint_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    Object {
      "name": "smallserial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    Object {
      "name": "serial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "text_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
    Object {
      "name": "time_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time without time zone",
        "type": 2,
      },
    },
    Object {
      "name": "time_with_time_zone_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time with time zone",
        "type": 6,
      },
    },
    Object {
      "name": "timestamp_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp without time zone",
        "type": 6,
      },
    },
    Object {
      "name": "timestamp_with_time_zone_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp with time zone",
        "type": 6,
      },
    },
    Object {
      "name": "tsquery_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsquery",
        "type": 2,
      },
    },
    Object {
      "name": "tsvector_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsvector",
        "type": 2,
      },
    },
    Object {
      "name": "txid_snapshot_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "txid_snapshot",
        "type": 2,
      },
    },
    Object {
      "name": "uuid_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "uuid",
        "type": 2,
      },
    },
    Object {
      "name": "xml_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "xml",
        "type": 2,
      },
    },
    Object {
      "name": "item",
      "type": Object {
        "attributes": Object {
          "name": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "text",
            "type": 2,
          },
          "price": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "numeric",
            "type": 3,
          },
          "supplier_id": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": 10,
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": Array [
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": 12,
      },
    },
    Object {
      "name": "state_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "items": Array [
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
    Object {
      "name": "item_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "attributes": Object {
            "name": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
    Object {
      "name": "static_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert different result types sql (SELECT * FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "not_null",
      "type": Object {
        "comment": "This column should never be null",
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "default_not_null",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "bigint_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    Object {
      "name": "bigserial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    Object {
      "name": "bit_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit",
        "type": 2,
      },
    },
    Object {
      "name": "bit_varying_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit varying",
        "type": 2,
      },
    },
    Object {
      "name": "boolean_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "boolean",
        "type": 5,
      },
    },
    Object {
      "name": "box_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "box",
        "type": 2,
      },
    },
    Object {
      "name": "bytea_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bytea",
        "type": 0,
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
    Object {
      "name": "character_varying_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character varying",
        "type": 2,
      },
    },
    Object {
      "name": "cidr_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "cidr",
        "type": 2,
      },
    },
    Object {
      "name": "circle_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "circle",
        "type": 13,
      },
    },
    Object {
      "name": "date_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "date",
        "type": 6,
      },
    },
    Object {
      "name": "double_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
    Object {
      "name": "inet_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "inet",
        "type": 2,
      },
    },
    Object {
      "name": "integer_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "interval_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "interval",
        "type": 13,
      },
    },
    Object {
      "name": "json_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "json",
        "type": 8,
      },
    },
    Object {
      "name": "jsonb_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "jsonb",
        "type": 8,
      },
    },
    Object {
      "name": "line_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "line",
        "type": 2,
      },
    },
    Object {
      "name": "lseg_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "lseg",
        "type": 2,
      },
    },
    Object {
      "name": "macaddr_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "macaddr",
        "type": 2,
      },
    },
    Object {
      "name": "money_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "money",
        "type": 2,
      },
    },
    Object {
      "name": "numeric_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
    Object {
      "name": "path_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "path",
        "type": 2,
      },
    },
    Object {
      "name": "pg_lsn_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "pg_lsn",
        "type": 2,
      },
    },
    Object {
      "name": "point_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "point",
        "type": 13,
      },
    },
    Object {
      "name": "polygon_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "polygon",
        "type": 2,
      },
    },
    Object {
      "name": "real_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "real",
        "type": 3,
      },
    },
    Object {
      "name": "smallint_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    Object {
      "name": "smallserial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    Object {
      "name": "serial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "text_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
    Object {
      "name": "time_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time without time zone",
        "type": 2,
      },
    },
    Object {
      "name": "time_with_time_zone_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time with time zone",
        "type": 6,
      },
    },
    Object {
      "name": "timestamp_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp without time zone",
        "type": 6,
      },
    },
    Object {
      "name": "timestamp_with_time_zone_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp with time zone",
        "type": 6,
      },
    },
    Object {
      "name": "tsquery_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsquery",
        "type": 2,
      },
    },
    Object {
      "name": "tsvector_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsvector",
        "type": 2,
      },
    },
    Object {
      "name": "txid_snapshot_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "txid_snapshot",
        "type": 2,
      },
    },
    Object {
      "name": "uuid_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "uuid",
        "type": 2,
      },
    },
    Object {
      "name": "xml_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "xml",
        "type": 2,
      },
    },
    Object {
      "name": "item",
      "type": Object {
        "attributes": Object {
          "name": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "text",
            "type": 2,
          },
          "price": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "numeric",
            "type": 3,
          },
          "supplier_id": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": 10,
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": Array [
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": 12,
      },
    },
    Object {
      "name": "state_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "items": Array [
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
    Object {
      "name": "item_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "attributes": Object {
            "name": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
    Object {
      "name": "static_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert empty array const sql (SELECT ARRAY[]) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "items": Array [],
          "postgresType": "any",
          "type": 12,
        },
        "postgresType": "any[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum array column sql (SELECT state_arr FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "state_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "items": Array [
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum array const sql (SELECT ARRAY[]::account_levelisation_state[]) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "items": Array [
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Done",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_levelisation_state",
          "type": 12,
        },
        "postgresType": "account_levelisation_state[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum array insert sql (INSERT INTO all_types (not_null, state_arr) VALUES (1, $state) RETURNING state_arr) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "state",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": Object {
          "comment": undefined,
          "items": Object {
            "items": Array [
              Object {
                "literal": "Active",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Active",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Active",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Dispute",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Dispute",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Dispute",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Closed",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Closed",
                "postgresType": "text",
                "type": 2,
              },
              Object {
                "literal": "Closed",
                "postgresType": "text",
                "type": 2,
              },
            ],
            "postgresType": "account_state",
            "type": 12,
          },
          "nullable": true,
          "postgresType": "account_state[]",
          "type": 11,
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "state_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "items": Array [
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum column sql (SELECT state FROM account_levelisations) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "state",
      "type": Object {
        "comment": undefined,
        "items": Array [
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Done",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": false,
        "postgresType": "account_levelisation_state",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum sql (SELECT 'Pending'::account_levelisation_state) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "row",
      "type": Object {
        "items": Array [
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Done",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "postgresType": "account_levelisation_state",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result double sql (SELECT ABS(ABS(integer_col)) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result single sql (SELECT ABS(integer_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function explicit type sql (SELECT ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)::int[] FROM all_types GROUP BY id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "postgresType": "int4",
          "type": 3,
        },
        "postgresType": "int4[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function guess type sql (SELECT ABS(ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)) FROM all_types GROUP BY id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators integer sql (SELECT integer_col + integer_col AS "test1" FROM all_types WHERE id = $id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": Object {
          "comment": undefined,
          "generated": false,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "test1",
      "type": Object {
        "nullable": true,
        "postgresType": "float4",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators string sql (SELECT character_col + integer_col AS "test1" FROM all_types WHERE character_col = $text) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "text",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": Object {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "character",
          "type": 2,
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "test1",
      "type": Object {
        "nullable": true,
        "postgresType": "float4",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter coalesce sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": Object {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter required sql (SELECT character_col FROM all_types WHERE integer_col > $id!) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": false,
        "postgresType": "any",
        "type": 14,
        "value": Object {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert select where sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": Object {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert simple sql (SELECT id, character_col FROM all_types WHERE id = :id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": Object {
          "comment": undefined,
          "generated": false,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert static array column sql (SELECT static_arr FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "static_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert static array const sql (SELECT '{}'::bigint[]) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "postgresType": "int8",
          "type": 4,
        },
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert sum sql (SELECT SUM(integer_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "sum",
      "type": Object {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert views types sql (SELECT * FROM all_types_view) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "not_null",
      "type": Object {
        "comment": "This column should never be null",
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "default_not_null",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "bigint_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    Object {
      "name": "bigserial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    Object {
      "name": "bit_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit",
        "type": 2,
      },
    },
    Object {
      "name": "bit_varying_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit varying",
        "type": 2,
      },
    },
    Object {
      "name": "boolean_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "boolean",
        "type": 5,
      },
    },
    Object {
      "name": "box_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "box",
        "type": 2,
      },
    },
    Object {
      "name": "bytea_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bytea",
        "type": 0,
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
    Object {
      "name": "character_varying_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character varying",
        "type": 2,
      },
    },
    Object {
      "name": "cidr_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "cidr",
        "type": 2,
      },
    },
    Object {
      "name": "circle_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "circle",
        "type": 13,
      },
    },
    Object {
      "name": "date_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "date",
        "type": 6,
      },
    },
    Object {
      "name": "double_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
    Object {
      "name": "inet_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "inet",
        "type": 2,
      },
    },
    Object {
      "name": "integer_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "interval_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "interval",
        "type": 13,
      },
    },
    Object {
      "name": "json_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "json",
        "type": 8,
      },
    },
    Object {
      "name": "jsonb_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "jsonb",
        "type": 8,
      },
    },
    Object {
      "name": "line_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "line",
        "type": 2,
      },
    },
    Object {
      "name": "lseg_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "lseg",
        "type": 2,
      },
    },
    Object {
      "name": "macaddr_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "macaddr",
        "type": 2,
      },
    },
    Object {
      "name": "money_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "money",
        "type": 2,
      },
    },
    Object {
      "name": "numeric_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
    Object {
      "name": "path_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "path",
        "type": 2,
      },
    },
    Object {
      "name": "pg_lsn_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "pg_lsn",
        "type": 2,
      },
    },
    Object {
      "name": "point_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "point",
        "type": 13,
      },
    },
    Object {
      "name": "polygon_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "polygon",
        "type": 2,
      },
    },
    Object {
      "name": "real_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "real",
        "type": 3,
      },
    },
    Object {
      "name": "smallint_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    Object {
      "name": "smallserial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    Object {
      "name": "serial_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    Object {
      "name": "text_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
    Object {
      "name": "time_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time without time zone",
        "type": 2,
      },
    },
    Object {
      "name": "time_with_time_zone_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time with time zone",
        "type": 6,
      },
    },
    Object {
      "name": "timestamp_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp without time zone",
        "type": 6,
      },
    },
    Object {
      "name": "timestamp_with_time_zone_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp with time zone",
        "type": 6,
      },
    },
    Object {
      "name": "tsquery_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsquery",
        "type": 2,
      },
    },
    Object {
      "name": "tsvector_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsvector",
        "type": 2,
      },
    },
    Object {
      "name": "txid_snapshot_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "txid_snapshot",
        "type": 2,
      },
    },
    Object {
      "name": "uuid_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "uuid",
        "type": 2,
      },
    },
    Object {
      "name": "xml_col",
      "type": Object {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "xml",
        "type": 2,
      },
    },
    Object {
      "name": "item",
      "type": Object {
        "attributes": Object {
          "name": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "text",
            "type": 2,
          },
          "price": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "numeric",
            "type": 3,
          },
          "supplier_id": Object {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": 10,
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": Array [
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": 12,
      },
    },
    Object {
      "name": "state_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "items": Array [
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
    Object {
      "name": "item_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "attributes": Object {
            "name": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": Object {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
    Object {
      "name": "static_arr",
      "type": Object {
        "comment": undefined,
        "items": Object {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;
